crates/tokmd-format/tests/analysis_format/snapshots/analysis_format__analysis_snapshot_w54__w54_analysis_tree_with_data.snap
---
source: crates/tokmd-format/tests/analysis_format/analysis_snapshot_w54.rs
assertion_line: 443
expression: "text(render(&r, AnalysisFormat::Tree).unwrap())"
---
project/
  src/
    engine.rs (600 lines)
    lib.rs (225 lines)
  tests/
    smoke.rs (73 lines)
